syntax = "proto3";

option go_package = "github.com/kefniark/go-web-server/gen/api";

message ProductEmptyResponse {}

message ProductData {
    string id = 1;
    string name = 2;
}

message ProductSetRequest {
    optional string id = 1;
    string name = 2;
}

message ProductGetRequest {
    string id = 1;
}

message ProductSearchRequest {
    optional int64 limit = 1;
    optional int64 offset = 2;
}

message ProductSearchResponse {
    repeated ProductData products = 1;
    int64 total = 2;
}

service Products {
    // Create or Update Product
    rpc set(ProductSetRequest) returns (ProductData) {}
        
    // Delete a Product
    rpc delete(ProductGetRequest) returns (ProductEmptyResponse) {}
    
    // Get a Product by Id
    rpc get(ProductGetRequest) returns (ProductData) {}

    // List multiple Products (filter, paginate)
    rpc search(ProductSearchRequest) returns (ProductSearchResponse) {}
}